--- a/school_web/hackin/templates/ml1.html
+++ b/school_web/hackin/templates/ml1.html
@@ -5,19 +5,120 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Cinzel&display=swap" rel="stylesheet">
   <title>Document</title>
+  <style>
+  .canvasjs-chart-credit{
+    display: None;
+  }
+  </style>
+<script>
+  window.onload = function () {
+
+var chart = new CanvasJS.Chart("chartContainer", {
+	animationEnabled: true,
+
+	title:{
+		text:"Results"
+	},
+	axisX:{
+		interval: 1
+	},
+	axisY2:{
+		interlacedColor: "white",
+		gridColor: "white",
+		title: "Score"
+	},
+	data: [{
+		type: "bar",
+		name: "companies",
+		axisYType: "secondary",
+		color: ["#f05f40",],
+		dataPoints: [
+			{ y: {{g1}}, label: "G1" },
+			{ y: {{g2}}, label: "G2" },
+			{ y: {{pr}}, label: "PREDICTED" },
+      { y: {{pr}}, label: "TARGET" }
+		]
+	}]
+});
+chart.render();
+var chart1 = new CanvasJS.Chart("chartContainer2",
+{
+  title:{
+    text: "Statistics"
+  },
+  data: [
+
+  {
+    dataPoints: [
+    { x: 1, y: {{dalc}}, label: "Alcohol-Consumption"},
+    { x: 2, y: {{goout}},  label: "Going-out" },
+    { x: 3, y: {{freetime}},  label: "Free-time"},
+    { x: 4, y: {{absences}},  label: "Absences"}
+    ]
+  }
+  ]
+});
+chart1.render()
+}
+</script>
 </head>
 <body>
-
+<div>
+  <nav class="navbar navbar-light navbar-expand-lg" style="background-color: #f05f40" id="mainNav">
+      <div class="container"><a class="navbar-brand js-scroll-trigger" href="#page-top">Schoolify</a><button data-toggle="collapse" data-target="#navbarResponsive" class="navbar-toggler navbar-toggler-right" type="button" aria-controls="navbarResponsive" aria-expanded="false"
+              aria-label="Toggle navigation"><i class="fa fa-align-justify"></i></button>
+          <div class="collapse navbar-collapse" id="navbarResponsive">
+              <ul class="nav navbar-nav ml-auto">
+                  <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
+                  <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="#services">Services</a></li>
+                  <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a></li>
+                  <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="#contact">Contact</a></li>
+              </ul>
+          </div>
+      </div>
+  </nav>
+</div>
+<header class="masthead text-center text-white d-flex" style="background-image:url('{% static "assets/img/header.jpg" %}');">
+  <div class="container my-auto">
+      <div class="row">
+          <div class="col-lg-10 mx-auto">
+              <h1 class="text-uppercase"><strong>Your Favorite Source of Free Bootstrap Themes</strong></h1>
+              <hr>
+          </div>
+      </div>
+      <div class="col-lg-8 mx-auto">
+          <p class="text-faded mb-5">We can help you build better websites using the Bootstrap CSS framework! Just download your template and start going, no strings attached!</p><a class="btn btn-primary btn-xl js-scroll-trigger" role="button" href="#services">Find Out More</a></div>
+  </div>
+</header>
 {% load crispy_forms_tags %}
+<div class="container row" >
+<div class="col-sm-3 container">
 <form action="." method="POST">{% csrf_token %}
     {{mform|crispy}}
-    <button type="submit">submit</button>
+    <br>
+    <button type="submit" class="btn btn-primary">submit</button>
 </form>
-<u>{{pr}}</u>
-<div class="progress">
-  <div class="progress-bar" role="progressbar" style="width: 100%" aria-valuenow="15" aria-valuemin="0" aria-valuemax="100"></div>
-  <div class="progress-bar bg-success" role="progressbar" style="width: 5%" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
+</div>
+<div class="col-sm-9">
+<div class="row">
+<div id="chartContainer" style="height: 370px; width: 100%;"></div>
+</div>
+<div class="row">
+<div id="chartContainer2" style="height: 370px; width: 100%;"></div>
+</div>
+<div class="row">
+<p>The model has predicted the following result from the input. However it must be taken only for reference purposes
+Only people decide what they are.</p>
+<b>{{pr}}</b>
+</div>
+</div>
 </div>
 </body>
+<script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.slim.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
 </html>
