--- a/school_web/hackin/templates/style.css
+++ b/school_web/hackin/templates/style.css
@@ -19,6 +19,7 @@ button {
   border: none;
   cursor: pointer;
   width: 100%;
+  border-radius: 25px;
 }
 
 button:hover {
@@ -55,7 +56,7 @@ span.psw {
 
 /* The Modal (background) */
 .modal {
-  align-items: center;
+  align-items: left;
   display: none; /* Hidden by default */
   position: fixed; /* Stay in place */
   z-index: 1; /* Sit on top */
@@ -71,7 +72,7 @@ span.psw {
 
 /* Modal Content/Box */
 .modal-content {
-  align-items: center;
+  align-items: left;
   background-color: #fefefe;
   margin: 5% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
   border: 1px solid #888;
