--- a/school_web/hackin/templates/index.html
+++ b/school_web/hackin/templates/index.html
@@ -94,7 +94,7 @@
 
             <div id="id01" class="modal">
     
-                <form class="modal-content animate" action="/action_page.php" method="post" style="color: #f44336;">
+                <form class="modal-content animate" action="/action_page.php" method="post" style="color: #f44336; text-align: left;">
                     
 
                     <div class="container">
@@ -107,9 +107,9 @@
                         <button type="submit">Login</button>
                         <label>
                             <input type="checkbox" checked="checked" name="remember"> Remember me
-                        </label>
-                        <p style="float: left;"> <a href="#" onclick="document.getElementById('id03').style.display='block'" >New User? Sign Up</a></p>
-                        <span class="psw"> <a href="#">Forgot password?</a></span>
+                        </label><br>
+                        <p style="float: left;"> <a href="#" onclick="document.getElementById('id02').style.display='block'">New User? Sign Up</a><br>
+                        <a href="#">Forgot password?</a></p>
                     </div>
 
                     <div class="container" style="background-color:#f1f1f1">
@@ -194,7 +194,7 @@
 
             <div id="id02" class="modal">
             
-                <form class="modal-content animate" action="/action_page.php" method="post" style="color: #f44336;">
+                <form class="modal-content animate" action="/action_page.php" method="post" style="color: #f44336; text-align: justify;">
                    
 
                     <div class="container">
@@ -207,9 +207,9 @@
                         <button type="submit">Login</button>
                         <label>
                             <input type="checkbox" checked="checked" name="remember"> Remember me
-                        </label>
-                        <p style="float: left;"> <a href="#" onclick="document.getElementById('id04').style.display='block'" >New User? Sign Up</a></p>
-                        <span class="psw">Forgot <a href="#">password?</a></span>
+                        </label><br>
+                        <p style="float: left;"> <a href="#" onclick="document.getElementById('id04').style.display='block'">New User? Sign Up</a><br>
+                        <a href="#">Forgot password?</a></p>
                     </div>
 
                     <div class="container" style="background-color:#f1f1f1">
