--- a/school_web/hackin/templates/index.html
+++ b/school_web/hackin/templates/index.html
@@ -86,7 +86,7 @@
             </div>
         </div>
     </section>
-    <section id="login" class="bg-dark text-white p-1">
+    <section id="login" class="bg-dark text-white p-1" style="padding: 10px;">
         <div class="container text-center p-0">
             <div class="mx-auto service-box mt-5"><i class="fa fa-sign-in fa-5x  mb-3 sr-icons" data-aos="zoom-in" data-aos-duration="200" data-aos-delay="400" data-aos-once="true" style="color:  #f44336;"></i>
             <h2 class="mb-4">Login</h2>
@@ -130,7 +130,7 @@
                         modal.style.display = "none";
                     }
                 }
-            </script>
+                </script>
             <div id="id03" class="modal">
     
                 <form class="modal-content animate" action="/action_page.php" method="post" style="color: #f44336;">
