--- a/school_web/hackin/templates/index.html
+++ b/school_web/hackin/templates/index.html
@@ -1,17 +1,16 @@
+{% load static %}
 <!DOCTYPE html>
-
-
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Schoolify</title>
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="{% static "assets/bootstrap/css/bootstrap.min.css" %}">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic">
-    <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
+    <link rel="stylesheet" href="{% static "assets/fonts/font-awesome.min.css" %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css">
-    <link rel="stylesheet" href="style.css"> 
+    <link rel="stylesheet" href="{% static "assets/style.css" %}">
 </head>
 
 <body id="page-top">
@@ -24,14 +23,14 @@
                     <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="#services">Services</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="#login">Login</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="#contact">Contact</a></li>
-            
-                     
+
+
                 </ul>
             </div>
         </div>
     </nav>
 
-    <header class="masthead text-center text-white d-flex" style="background-image:url('assets/img/header.jpg');">
+    <header class="masthead text-center text-white d-flex" style="background-image:url('{% static "assets/img/header.jpg" %}');">
         <div class="container my-auto">
             <div class="row">
                 <div class="col-lg-10 mx-auto">
@@ -82,7 +81,7 @@
                         <p class="text-muted mb-0">Parents can easily connect with teachers regarding thier child.</p>
                     </div>
                 </div>
-           
+
             </div>
         </div>
     </section>
@@ -93,9 +92,9 @@
             <button  role="button" onclick="document.getElementById('id01').style.display='block'" style="width:auto; text-align: left; margin:5px" data-aos="zoom-in" data-aos-duration="400" data-aos-once="true">Login as Student</button>
 
             <div id="id01" class="modal">
-    
+
                 <form class="modal-content animate" action="/action_page.php" method="post" style="color: #f44336; text-align: left;">
-                    
+
 
                     <div class="container">
                         <label for="uname"><b>Username</b></label>
@@ -103,7 +102,7 @@
 
                         <label for="psw"><b>Password</b></label>
                         <input type="password" placeholder="Enter Password" name="psw" required>
-                        
+
                         <button type="submit">Login</button>
                         <label>
                             <input type="checkbox" checked="checked" name="remember"> Remember me
@@ -115,15 +114,15 @@
                     <div class="container" style="background-color:#f1f1f1">
 
                         <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Cancel</button>
-                       
+
                     </div>
-                    
+
                 </form>
             </div>
                 <script>
                 // Get the modal
                 var modal = document.getElementById('id01');
-                
+
                 // When the user clicks anywhere outside of the modal, close it
                 window.onclick = function(event) {
                     if (event.target == modal) {
@@ -132,25 +131,25 @@
                 }
                 </script>
             <div id="id03" class="modal">
-    
+
                 <form class="modal-content animate" action="/action_page.php" method="post" style="color: #f44336;">
-                    
+
 
                     <div class="container" style="text-align: left;">
                         <label for="fname"><b>Full Name</b></label>
-                        <input class="form-control" type="text" placeholder="Enter Username" name="fname" required>  
+                        <input class="form-control" type="text" placeholder="Enter Username" name="fname" required>
 
                         <label for="num"><b>Contact Number</b></label><br>
-                        <input class="form-control" type="tel" placeholder="Enter Contact Number" name="num" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" required><br> 
+                        <input class="form-control" type="tel" placeholder="Enter Contact Number" name="num" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" required><br>
 
                         <label for="pname"><b>Father's Name</b></label>
-                        <input class="form-control" type="text" placeholder="Enter Father's Name" name="pname" required>  
+                        <input class="form-control" type="text" placeholder="Enter Father's Name" name="pname" required>
 
                         <label for="mname"><b>Mother's Name</b></label>
-                        <input class="form-control" type="text" placeholder="Enter Username" name="mname" required>   
+                        <input class="form-control" type="text" placeholder="Enter Username" name="mname" required>
 
                         <label for="email"><b>Email Address</b></label>
-                        <input class="form-control" type="email" placeholder="Enter Email" name="email" required><br>      
+                        <input class="form-control" type="email" placeholder="Enter Email" name="email" required><br>
 
                         <label for="mname"><b>School Name</b></label>
                         <select class="form-control">
@@ -158,13 +157,13 @@
                         <option value="school1">School 1</option>
                         <option value="school1">School 1</option>
                         <option value="school1">School 1</option>
-                    
+
                         </select><br>
-                    
+
 
                         <label for="psw"><b>Password</b></label>
                         <input class="form-control" type="password" placeholder="Enter Password" name="psw" required>
-                        
+
                         <button type="submit">Login</button>
                         <label>
                             <input type="checkbox" checked="checked" name="remember"> Remember me
@@ -174,15 +173,15 @@
                     <div class="container" style="background-color:#f1f1f1">
 
                         <button type="button" onclick="document.getElementById('id03').style.display='none'" class="cancelbtn">Cancel</button>
-                       
+
                     </div>
-                    
+
                 </form>
             </div>
             <script>
                 // Get the modal
                 var modal = document.getElementById('id03');
-                
+
                 // When the user clicks anywhere outside of the modal, close it
                 window.onclick = function(event) {
                     if (event.target == modal) {
@@ -193,9 +192,9 @@
             <button onclick="document.getElementById('id02').style.display='block'" style="width:auto; text-align: right; margin:5px" data-aos="zoom-in" data-aos-duration="400" data-aos-once="true">Login as School</button>
 
             <div id="id02" class="modal">
-            
+
                 <form class="modal-content animate" action="/action_page.php" method="post" style="color: #f44336; text-align: justify;">
-                   
+
 
                     <div class="container">
                         <label for="uname"><b>Username</b></label>
@@ -203,7 +202,7 @@
 
                         <label for="psw"><b>Password</b></label>
                         <input type="password" placeholder="Enter Password" name="psw" required>
-                        
+
                         <button type="submit">Login</button>
                         <label>
                             <input type="checkbox" checked="checked" name="remember"> Remember me
@@ -214,14 +213,14 @@
 
                     <div class="container" style="background-color:#f1f1f1">
                         <button type="button" onclick="document.getElementById('id02').style.display='none'" class="cancelbtn">Cancel</button>
-                        
+
                     </div>
                 </form>
             </div>
                 <script>
                 // Get the modal
                 var modal = document.getElementById('id02');
-                
+
                 // When the user clicks anywhere outside of the modal, close it
                 window.onclick = function(event) {
                     if (event.target == modal) {
@@ -230,30 +229,30 @@
                 }
             </script>
             <div id="id04" class="modal">
-    
+
                 <form class="modal-content animate" action="/action_page.php" method="post" style="color: #f44336;">
-                    
+
 
                     <div class="container" style="text-align: left;">
                         <label for="sname"><b>School Name</b></label>
-                        <input class="form-control" type="text" placeholder="Enter School Name" name="sname" required>  
+                        <input class="form-control" type="text" placeholder="Enter School Name" name="sname" required>
 
                         <label for="snum"><b>Contact Number</b></label><br>
-                        <input class="form-control" type="tel" placeholder="Enter Contact Number" name="snum" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" required><br> 
+                        <input class="form-control" type="tel" placeholder="Enter Contact Number" name="snum" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" required><br>
 
-                        <label for="sadd><b>School Address</b></label>
-                        <input class="form-control" type="text" placeholder="Enter School Address" name="sadd" required>  
+                        <label for="sadd"><b>School Address</b></label>
+                        <input class="form-control" type="text" placeholder="Enter School Address" name="sadd" required>
 
                         <label for="mname"><b>Principal Name</b></label>
-                        <input class="form-control" type="text" placeholder="Enter Principal name" name="mname" required>   
+                        <input class="form-control" type="text" placeholder="Enter Principal name" name="mname" required>
 
                         <label for="semail"><b>Email Address</b></label>
-                        <input class="form-control" type="email" placeholder="Enter School Email" name="semail" required><br>     
-                    
+                        <input class="form-control" type="email" placeholder="Enter School Email" name="semail" required><br>
+
 
                         <label for="spsw"><b>Password</b></label>
                         <input class="form-control" type="password" placeholder="Enter Password" name="spsw" required>
-                        
+
                         <button type="submit">Login</button>
                         <label>
                             <input type="checkbox" checked="checked" name="remember"> Remember me
@@ -263,15 +262,15 @@
                     <div class="container" style="background-color:#f1f1f1">
 
                         <button type="button" onclick="document.getElementById('id04').style.display='none'" class="cancelbtn">Cancel</button>
-                       
+
                     </div>
-                    
+
                 </form>
             </div>
             <script>
                 // Get the modal
                 var modal = document.getElementById('id04');
-                
+
                 // When the user clicks anywhere outside of the modal, close it
                 window.onclick = function(event) {
                     if (event.target == modal) {
@@ -300,11 +299,11 @@
             </div>
         </div>
     </section>
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="assets/js/bs-init.js"></script>
+    <script src="{% static "assets/js/jquery.min.js" %}"></script>
+    <script src="{% static "assets/bootstrap/js/bootstrap.min.js" %}"></script>
+    <script src="{% static "assets/js/bs-init.js" %}"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
-    <script src="assets/js/creative.js"></script>
+    <script src="{% static "assets/js/creative.js" %}"></script>
 </body>
