--- a/school_web/hackin/templates/ml1.html
+++ b/school_web/hackin/templates/ml1.html
@@ -7,10 +7,14 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
   <link href="https://fonts.googleapis.com/css?family=Cinzel&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="{% static "assets/fonts/font-awesome.min.css" %}" >
   <title>Document</title>
   <style>
   .canvasjs-chart-credit{
     display: None;
+  }
+  .maindiv{
+    margin: 0;
   }
   </style>
 <script>
@@ -39,7 +43,7 @@ var chart = new CanvasJS.Chart("chartContainer", {
 			{ y: {{g1}}, label: "G1" },
 			{ y: {{g2}}, label: "G2" },
 			{ y: {{pr}}, label: "PREDICTED" },
-      { y: {{pr}}, label: "TARGET" }
+      { y: 20, label: "MAx" }
 		]
 	}]
 });
@@ -54,14 +58,44 @@ var chart1 = new CanvasJS.Chart("chartContainer2",
   {
     dataPoints: [
     { x: 1, y: {{dalc}}, label: "Alcohol-Consumption"},
-    { x: 2, y: {{goout}},  label: "Going-out" },
-    { x: 3, y: {{freetime}},  label: "Free-time"},
-    { x: 4, y: {{absences}},  label: "Absences"}
+    { x: 2, y: {{absences}},  label: "Absences"}
     ]
   }
   ]
 });
 chart1.render()
+var chart2 = new CanvasJS.Chart("chartContainer3",
+{
+  title:{
+    text: ""
+  },
+  data: [
+
+  {
+    dataPoints: [
+    { x: 1, y: {{goout}},  label: "Going-out" },
+    { x: 2, y: {{freetime}},  label: "Free-time"}
+    ]
+  }
+  ]
+});
+chart2.render()
+var chart3 = new CanvasJS.Chart("chartContainer4",
+{
+  title:{
+    text: ""
+  },
+  data: [
+
+  {
+    dataPoints: [
+    { x: 1, y: {{traveltime}},  label: "Going-out" },
+    { x: 2, y: {{stime}},  label: "Free-time"}
+    ]
+  }
+  ]
+});
+chart3.render()
 }
 </script>
 </head>
@@ -72,50 +106,75 @@ chart1.render()
               aria-label="Toggle navigation"><i class="fa fa-align-justify"></i></button>
           <div class="collapse navbar-collapse" id="navbarResponsive">
               <ul class="nav navbar-nav ml-auto">
-                  <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
-                  <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="#services">Services</a></li>
-                  <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a></li>
-                  <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="#contact">Contact</a></li>
+                  <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="#about">Details</a></li>
+                  <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="#services">School Records</a></li>
+                  <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="#portfolio"></a>E-store</li>
+                  <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="#contact">Logout</a></li>
               </ul>
           </div>
       </div>
   </nav>
 </div>
-<header class="masthead text-center text-white d-flex" style="background-image:url('{% static "assets/img/header.jpg" %}');">
+<header class="masthead text-center text-white d-flex" style="background-image:url('{% static "assets/img/header.jpg" %}'); height: 35em; margin-bottom:2em;">
   <div class="container my-auto">
       <div class="row">
           <div class="col-lg-10 mx-auto">
-              <h1 class="text-uppercase"><strong>Your Favorite Source of Free Bootstrap Themes</strong></h1>
+              <h1 class="text-uppercase"><strong>Your personalized one-of-a-kind soothsayer</strong></h1>
               <hr>
           </div>
       </div>
       <div class="col-lg-8 mx-auto">
-          <p class="text-faded mb-5">We can help you build better websites using the Bootstrap CSS framework! Just download your template and start going, no strings attached!</p><a class="btn btn-primary btn-xl js-scroll-trigger" role="button" href="#services">Find Out More</a></div>
+          <p class="text-faded mb-5">This model can predict your future results on the basis of today's performance. Fill out
+          all the paramters correctly. However it must be noted that this is for refernece purposes only. Nothing is impossible.</p></div>
   </div>
 </header>
 {% load crispy_forms_tags %}
-<div class="container row" >
+<div class="container">
+<div class=" row maindiv justify-content-between" >
 <div class="col-sm-3 container">
 <form action="." method="POST">{% csrf_token %}
     {{mform|crispy}}
     <br>
-    <button type="submit" class="btn btn-primary">submit</button>
+    <button type="submit" class="btn btn-primary btn-lg" style="background-color:#f05f40;">submit</button>
 </form>
 </div>
 <div class="col-sm-9">
 <div class="row">
-<div id="chartContainer" style="height: 370px; width: 100%;"></div>
+<div id="chartContainer" style="height: 450px; width: 90%;"></div>
 </div>
 <div class="row">
-<div id="chartContainer2" style="height: 370px; width: 100%;"></div>
+<div id="chartContainer2" style="height: 450px; width: 90%;"></div>
 </div>
 <div class="row">
-<p>The model has predicted the following result from the input. However it must be taken only for reference purposes
-Only people decide what they are.</p>
-<b>{{pr}}</b>
+<div id="chartContainer3" style="height: 450px; width: 90%;"></div>
+</div>
+<div class="row">
+<div id="chartContainer4" style="height: 450px; width: 90%;"></div>
+</div>
+<div class="row" style="margin-top: 2em;">
+<p>The model has predicted the following result from the input:<b style="font-size: 2em;"> {{pr}} </b></p>
 </div>
 </div>
 </div>
+</div>
+<section id="contact">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-8 mx-auto text-center">
+                <h2 class="section-heading">Let's Get In Touch!</h2>
+                <hr class="my-4">
+                <p class="mb-5">Ready to start your next project with us? That's great! Give us a call or send us an email and we will get back to you as soon as possible!</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-4 ml-auto text-center"><i class="fa fa-phone fa-3x mb-3 sr-contact" data-aos="zoom-in" data-aos-duration="300" data-aos-once="true"></i>
+                <p>123-456-6789</p>
+            </div>
+            <div class="col-lg-4 mr-auto text-center"><i class="fa fa-envelope-o fa-3x mb-3 sr-contact" data-aos="zoom-in" data-aos-duration="300" data-aos-delay="300" data-aos-once="true"></i>
+                <p><a href="mailto:your-email@your-domain.com">email@example.com</a></p>
+            </div>
+        </div>
+    </div>
 </body>
 <script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.slim.js"></script>
