--- a/school_web/hackin/templates/ml1.html
+++ b/school_web/hackin/templates/ml1.html
@@ -108,7 +108,7 @@ chart3.render()
               <ul class="nav navbar-nav ml-auto">
                   <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="#about">Details</a></li>
                   <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="#services">School Records</a></li>
-                  <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="#portfolio"></a>E-store</li>
+                  <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="#portfolio">E-store</a></li>
                   <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="#contact">Logout</a></li>
               </ul>
           </div>
@@ -140,13 +140,13 @@ chart3.render()
 </div>
 <div class="col-sm-9">
 <div class="row">
-<div id="chartContainer" style="height: 450px; width: 90%;"></div>
+<div id="chartContainer" style="height: 450px; width: 90%;margin-bottom: 10em"></div>
 </div>
 <div class="row">
-<div id="chartContainer2" style="height: 450px; width: 90%;"></div>
+<div id="chartContainer2" style="height: 450px; width: 90%; margin-bottom: 8em"></div>
 </div>
 <div class="row">
-<div id="chartContainer3" style="height: 450px; width: 90%;"></div>
+<div id="chartContainer3" style="height: 450px; width: 90%; margin-bottom: 8em"></div>
 </div>
 <div class="row">
 <div id="chartContainer4" style="height: 450px; width: 90%;"></div>
