--- a/school_web/hackin/templates/index.html
+++ b/school_web/hackin/templates/index.html
@@ -34,7 +34,7 @@
         <div class="container my-auto">
             <div class="row">
                 <div class="col-lg-10 mx-auto">
-                    <h1 class="text-uppercase"><strong>Tagline koi </strong></h1>
+                    <h1 class="text-uppercase"><strong>Coolify your student life</strong></h1>
                     <hr>
                 </div>
             </div>
@@ -48,7 +48,7 @@
                 <div class="col offset-lg-8 mx-auto text-center">
                     <h2 class="text-white section-heading">We've got what you need!</h2>
                     <hr class="light my-4">
-                    <p class="text-faded mb-4">Lamba sa about us</p></div>
+                    <p class="text-faded mb-4">Schoolify is an online plaform which will benefit all the parents during this time of crisis. Today social distancing has become the most important issue.Getting school accessories such as books,uniforms,stationary etc for the students is a big headache for every parent and coronavirus has seemingly added more stress to it. Be an informed parent in this era of digitalization and keep a continous check over your child's performance and behaviour.Also we can help students and parents in determining how much a student requires education support to achieve his/her target</p></div>
             </div>
         </div>
     </section>
