--- a/school_web/hackin/templates/style.css
+++ b/school_web/hackin/templates/style.css
@@ -120,3 +120,10 @@ span.psw {
      width: 100%;
   }
 }
+
+.product{
+  width: 100px;
+   height: 300px;
+    border: 2px solid black; 
+  padding-left: 20px;
+}
