--- a/school_web/hackin/templates/student_interface.html
+++ b/school_web/hackin/templates/student_interface.html
@@ -61,14 +61,14 @@
             <div class = "row">
                 
                 <div class = "col-sm-6" style="text-align: left; padding: 3%;">
-                    <h2>Name: {{first_name}} {{last_name}}</h2>
-                    <h2>Father's name: {{F_name}}</h2>
-                    <h2>Mother's name: {{M_name}}</h2>
+                    <h2>Name: Riya Verma</h2>
+                    <h2>Father's name: Mr Aryan Verma</h2>
+                    <h2>Mother's name: Ms Arundhati Verma</h2>
                 </div>
                 <div class = "col-sm-6" style="text-align: left; padding: 3%;">    
-                    <h2>Admission ID: {{adm_id}}</h2>
-                    <h2>Email Address: {{email_id}}</h2>
-                    <h2>School: {{school_name}}</h2>
+                    <h2>Admission ID: 341233</h2>
+                    <h2>Email Address: rriya_verma@gmail.com</h2>
+                    <h2>School: D.P.S Indirapuram</h2>
                 </div>
             </div>         
         </div>
@@ -77,14 +77,14 @@
             <div class = "row">
                 
                 <div class = "col-sm-6" style="text-align: left; padding: 3%;">
-                    <h2>Total Working Days: {{working_days}}</h2>
-                    <h2>Days attended: {{present_days}}</h2>
-                    <h2>Half days: {{half_days}}</h2>
+                    <h2>Total Working Days: 214</h2>
+                    <h2>Days attended: 189</h2>
+                    <h2>Half days: 6</h2>
                 </div>
                 <div class = "col-sm-6" style="text-align: left; padding: 3%;">    
-                    <h2>Admission ID: {{adm_id}}</h2>
-                    <h2>Days missed: {{absent_days}}</h2>
-                    <h2>Total attendance: {{present_days + half_days/2}}/{{total_days}}</h2>
+                    <h2>Admission ID: 341233 </h2>
+                    <h2>Days missed: 19</h2>
+                    <h2>Total attendance: 192/214</h2>
                 </div>
             </div>    
 
@@ -101,29 +101,29 @@
                             <th>Final Term</th>
                         </tr>
                         <tr>
-                            <td>{{}}</td>
-                            <td>{{}}</td>
-                            <td>{{}}</td>
+                            <td>English</td>
+                            <td>40/50</td>
+                            <td>95/100</td>
                         </tr>
                         <tr>
-                            <td>{{}}</td>
-                            <td>{{}}</td>
-                            <td>{{}}</td>
+                            <td>Mathematics</td>
+                            <td>50/50</td>
+                            <td>100/100</td>
                         </tr>
                         <tr>
-                            <td>{{}}</td>
-                            <td>{{}}</td>
-                            <td>{{}}</td>
+                            <td>Hindi</td>
+                            <td>37/50</td>
+                            <td>87/100</td>
                         </tr>
                         <tr>
-                            <td>{{}}</td>
-                            <td>{{}}</td>
-                            <td>{{}}</td>
+                            <td>Science</td>
+                            <td>48/50</td>
+                            <td>100/100</td>
                         </tr>
                         <tr>
-                            <td>{{}}</td>
-                            <td>{{}}</td>
-                            <td>{{}}</td>
+                            <td>Social Science</td>
+                            <td>43/50</td>
+                            <td>92/100</td>
                         </tr>
                     </table>
             
