--- a/school_web/hackin/templates/teacher_interface.html
+++ b/school_web/hackin/templates/teacher_interface.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-        <title>Student Home - Schoolify</title>
+        <title>Teacher Home - Schoolify</title>
         <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic">
@@ -20,7 +20,6 @@
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="nav navbar-nav ml-auto">
                         <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="#details">Details</a></li>
-                        <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="">Classes</a></li>
                         <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="ml1.html">Predictor</a></li>
                         <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="index.html">Logout</a></li>
                     </ul>
@@ -38,5 +37,21 @@
                 </div>
             </div>
         </section>
+        <div id = "details" class="jumbotron text-center" style="background-color: white; text-align: left;">
+            <h1 style="text-align: center;">Details</h1>
+            <div class = "row">
+                
+                <div class = "col-sm-6" style="text-align: left; padding: 3%;">
+                    <h2>Name: Ms. Navita Sharma</h2>
+                    <h2>Class: X - D</h2>
+                    <h2>Subject: English</h2>
+                </div>
+                <div class = "col-sm-6" style="text-align: left; padding: 3%;">    
+                    <h2>Employee ID: DPSIP103</h2>
+                    <h2>Email Address: navita.sharma@gmail.com</h2>
+                    <h2>School: D.P.S Indirapuram</h2>
+                </div>
+            </div>         
+        </div>
     </body>
 </html>    
