--- a/school_web/hackin/templates/index.html
+++ b/school_web/hackin/templates/index.html
@@ -93,7 +93,7 @@
 
             <div id="id01" class="modal">
 
-                <form class="modal-content animate" action="/action_page.php" method="post" style="color: #f44336; text-align: left;">
+                <form class="modal-content animate" action="." method="post" style="color: #f44336; text-align: left;">
 
 
                     <div class="container">
@@ -194,7 +194,7 @@
 
             <div id="id02" class="modal">
 
-                <form class="modal-content animate" action="/action_page.php" method="post" style="color: #f44336; text-align: justify;">
+                <form class="modal-content animate" action="." method="post" style="color: #f44336; text-align: justify;">
 
 
                     <div class="container">
@@ -231,7 +231,7 @@
             </script>
             <div id="id04" class="modal">
 
-                <form class="modal-content animate" action="/action_page.php" method="post" style="color: #f44336;">
+                <form class="modal-content animate" action="." method="post" style="color: #f44336;">
 
 
                     <div class="container" style="text-align: left;">
