--- a/school_web/hackin/templates/ml1.html
+++ b/school_web/hackin/templates/ml1.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
   <link href="https://fonts.googleapis.com/css?family=Cinzel&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="{% static "assets/fonts/font-awesome.min.css" %}" >
-  <title>Document</title>
+  <title>  Predictor</title>
   <style>
   .canvasjs-chart-credit{
     display: None;
