--- a/school_web/hackin/templates/ecart.html
+++ b/school_web/hackin/templates/ecart.html
@@ -28,26 +28,50 @@
         <div class="row" style="padding-top: 30px;">
             <div class="col-md-2"></div>
             <div class="col-md-2 product">
-                <img src="assets/img/thumbnails/2.jpg" alt="" style="width: 230px; height: 150px; ">
-                <h4><strong>Product Name</strong></h4>
+                <img src="https://elearningindustry.com/wp-content/uploads/2016/05/top-10-books-every-college-student-read-e1464023124869.jpeg" alt="" style="width: 228px; height: 150px; margin-top: 5px; ">
+                <h4><strong>Books</strong></h4>
                 <hr>
                 <button class="btn btn-outline-secondary">Buy</button>
             </div>
              <div class="col-md-1"></div>
              <div class="col-md-2 product">
-                <img src="assets/img/thumbnails/2.jpg" alt="" style="width: 230px; height: 150px">
+                <img src="https://5.imimg.com/data5/GT/QM/MY-52070189/girl-school-bags-500x500.jpg" alt="" style="width: 228px; height: 170px; margin-top: 5px">
+                <h4><strong>School Bag</strong></h4>
+                <hr>
+                <button class="btn btn-outline-secondary">Buy</button>
+            </div> 
+             <div class="col-md-1"></div>
+            <div class="col-md-2 product">
+                <img src="https://lh3.googleusercontent.com/DuWSdjNdLmmMwM8T4uPlZlJZAlMD2j6m85C6m47XDwj1o0MjF7yKoHLjZTQs5FZQi-6DyGFYbT3IQnfOMQzKWiQyIg=w1000" alt="" style="width: 228px; height: 180px; margin-top: 5px">
+                <h4><strong>Uniform</strong></h4>
+                <hr>
+                <button class="btn btn-outline-secondary">Buy</button>
+            </div>
+        </div>
+            <div class="row" style="padding-top: 30px;">
+            <div class="col-md-2"></div>
+            <div class="col-md-2 product">
+                <img src="https://lh3.googleusercontent.com/DuWSdjNdLmmMwM8T4uPlZlJZAlMD2j6m85C6m47XDwj1o0MjF7yKoHLjZTQs5FZQi-6DyGFYbT3IQnfOMQzKWiQyIg=w1000" alt="" style="width: 228px; height: 180px; margin-top: 5px ">
+                <h4><strong>Uniform</strong></h4>
+                <hr>
+                <button class="btn btn-outline-secondary">Buy</button>
+            </div>
+             <div class="col-md-1"></div>
+             <div class="col-md-2 product">
+                <img src="https://elearningindustry.com/wp-content/uploads/2016/05/top-10-books-every-college-student-read-e1464023124869.jpeg" alt="" style="width: 228px; height: 150px; margin-top: 5px; ">
                 <h4><strong>Product Name</strong></h4>
                 <hr>
                 <button class="btn btn-outline-secondary">Buy</button>
             </div> 
              <div class="col-md-1"></div>
             <div class="col-md-2 product">
-                <img src="assets/img/thumbnails/2.jpg" alt="" style="width: 230px; height: 150px">
-                <h4><strong>Product Name</strong></h4>
+                <img src="https://5.imimg.com/data5/GT/QM/MY-52070189/girl-school-bags-500x500.jpg" alt="" style="width: 228px; height: 170px">
+                <h4><strong>School Bag</strong></h4>
                 <hr>
                 <button class="btn btn-outline-secondary">Buy</button>
             </div>
         </div>
+
     </div>
 </body>
 </html>
