--- a/school_web/hackin/templates/ml1.html
+++ b/school_web/hackin/templates/ml1.html
@@ -89,8 +89,8 @@ var chart3 = new CanvasJS.Chart("chartContainer4",
 
   {
     dataPoints: [
-    { x: 1, y: {{traveltime}},  label: "Going-out" },
-    { x: 2, y: {{stime}},  label: "Free-time"}
+    { x: 1, y: {{traveltime}},  label: "Travel-time" },
+    { x: 2, y: {{stime}},  label: "Study-time"}
     ]
   }
   ]
@@ -107,8 +107,8 @@ chart3.render()
           <div class="collapse navbar-collapse" id="navbarResponsive">
               <ul class="nav navbar-nav ml-auto">
                   <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="#about">Details</a></li>
-                  <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="#services">School Records</a></li>
-                  <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="#portfolio">E-store</a></li>
+                  <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="student">School Records</a></li>
+                  <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="ekart">E-store</a></li>
                   <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="#contact">Logout</a></li>
               </ul>
           </div>
